Adjusted some elements in Servicos to render correctly on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -241,14 +241,18 @@ body {
 
 #servicos-content {
 	text-align: left;
-	padding: 1%;
+    padding: 1%;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
 }
 
-@media(orientation: portrait) {
+/*@media(orientation: portrait) {
 	.servicos-content-divulgacao {
 		padding: 3.5vh !important;
 	}
-}
+}*/
 
 #servicos-content-l {
     margin-left: 1.5vh;
@@ -328,7 +332,7 @@ body {
 #servicos-img-footer {
 	position: relative;
 	z-index: 0;
-	margin-top: 4.5vh;
+	margin-top: 5.5vh;
 }
 
 #servicos-img-footer img {
@@ -414,7 +418,6 @@ body {
 }
 
 #servicos-header {
-	margin-top: -3.5vh;
 	margin-bottom: 2.5vh;
 }
 
